--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,5 +6,5 @@ parts = test
 recipe = zc.recipe.testrunner
 working-directory = .
 defaults = ["--tests-pattern", "^f?tests$"]
-eggs = z3c.dav [test]
+eggs = z3c.dav
        z3c.davapp.zopefile [test]
