--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,4 +7,4 @@ recipe = zc.recipe.testrunner
 working-directory = .
 defaults = ["--tests-pattern", "^f?tests$"]
 eggs = z3c.dav
-       z3c.davapp.zopefile [test]
+       z3c.davapp.zopefile
